# discworld-hex

./: .gitignore  README.md  pyproject.toml
conda/: bootstrap.sh  discworld-hex.yaml
src/discworld_hex/: __init__.py  book.py  fetch_books.py  library.py  search.py  sections.py
tests/: test_sentence_transformer.py
